# security_agent

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  README.md  pyproject.toml
app/api/: routes_chat.py  routes_tools.py  schemas.py
backend/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  start_backend.sh  start_mcp.sh
backend/app/: main.py
backend/app/api/: deps.py  routes_chat.py  routes_tools.py  schemas.py
backend/app/api/v1/: __init__.py  chat.py  schemas.py  sessions.py  tools.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/graph/: builder.py  events.py  nodes.py  state.py
backend/app/llm/: openai_compatible.py
backend/app/mcp/: client.py  local_server.py
backend/app/memory/: repository.py
backend/app/prompts/: loader.py  renderer.py
backend/app/services/: agent_service.py
backend/app/skills/: registry.py
backend/config/: settings.example.json
backend/prompts/: classify_intent_system.md  classify_intent_user.md  in_progress_retry.md  system.md  tool_router_system.md
backend/prompts/policies/: tool_call_policy.md
backend/skills/: SKILL.md
backend/skills/scripts/: __init__.py  apk_analyzer.py  code_analyzer.py
backend/summaries/: network_security_report  network_security_test_report.html
backend/tests/: test_config_json.py  test_prompt_loader_paths.py  test_vehicle_routing.py
config/: settings.json
frontend/: .gitignore  index.html  package-lock.json  package.json  start_frontend.sh  tailwind.config.js
prompts/: system.md  user_template.md
tests/: test_vehicle_routing.py
(+26 files in other folders)
